traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:18: error: not found: value O
      for (a <- O to 6){
                ^