traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.code
var diag = 0;
//var a : Int = 1
//var y : Int = 0
var counter : Int = 0;
var finalpos : Boolean = true;
override def run() {
      for(y <- 0 to 6){
        for (x <- 0 to y){
          setPos(x,y-x)
          writeMessage(counter)
          counter = counter + 1
      }
 
    }
  setPos(1,6)
  writeMessage(counter)
  counter = counter + 1
    for (x <- 1 to 6){
      for (a <- O to 6){
      		setPos(getX()+1,getY()-1)
      		writeMessage(counter)
      		counter = counter + 1
      }
        setPos(x,6)
  }
      
    }
    


